tests/ui/error-codes/e0119/conflict-with-std.stderr
error[E0119]: conflicting implementations of trait `AsRef<Q>` for type `Box<Q>`
  --> $DIR/conflict-with-std.rs:5:1
   |
LL | impl AsRef<Q> for Box<Q> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `alloc`:
           - impl<T, A> AsRef<T> for Box<T, A>
             where A: Allocator, T: ?Sized;

error[E0119]: conflicting implementations of trait `From<S>` for type `S`
  --> $DIR/conflict-with-std.rs:12:1
   |
LL | impl From<S> for S {
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> From<T> for T;

error[E0119]: conflicting implementations of trait `TryFrom<X>` for type `X`
  --> $DIR/conflict-with-std.rs:19:1
   |
LL | impl TryFrom<X> for X {
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T, U> TryFrom<U> for T
             where U: Into<T>;

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
